    for a named UNIQUE constraint.

  - Fixed "table" argument on constructor of ForeginKeyConstraint
    [ticket:1571]
    
- oracle
  - Added a check for cx_oracle versions lower than version 5,
    in which case the incompatible "output type handler" won't 
    be used.   This will impact decimal accuracy and some
    unicode handling issues.  [ticket:1775]

- firebird
  - Added a label to the query used within has_table() and 
    has_sequence() to work with older versions of Firebird
    that don't provide labels for result columns. [ticket:1521]
    
  - Added integer coercion to the "type_conv" attribute when 
    passed via query string, so that it is properly interpreted
    by Kinterbasdb. [ticket:1779]
    
0.6.0
=====

- orm
  - Unit of work internals have been rewritten.  Units of work
    with large numbers of objects interdependent objects 
    can now be flushed without recursion overflows 
    as there is no longer reliance upon recursive calls
    [ticket:1081].  The number of internal structures now stays 
    constant for a particular session state, regardless of 
    how many relationships are present on mappings.  The flow 
    of events now corresponds to a linear list of steps, 
    generated by the mappers and relationships based on actual
    work to be done, filtered through a single topological sort 
    for correct ordering.  Flush actions are assembled using 
    far fewer steps and less memory. [ticket:1742]

  - Along with the UOW rewrite, this also removes an issue
    introduced in 0.6beta3 regarding topological cycle detection 
    for units of work with long dependency cycles.  We now use
    an algorithm written by Guido (thanks Guido!).

  - one-to-many relationships now maintain a list of positive
    parent-child associations within the flush, preventing
    previous parents marked as deleted from cascading a 
    delete or NULL foreign key set on those child objects,